--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,9 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/memcached": "^2.2.7",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/redis": "^2.8.25",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
@@ -48,9 +50,12 @@
     "graphql": "^15.3.0",
     "jsonwebtoken": "^9.0.0",
     "memcached": "^2.2.2",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "redis": "^4.6.4",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.12",
+    "uuid": "^9.0.0"
   },
   "mikro-orm": {
     "useTsNode": true,
