--- a/web/package.json
+++ b/web/package.json
@@ -7,22 +7,30 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@graphql-codegen/client-preset": "^2.1.0",
+    "@urql/exchange-graphcache": "^5.0.9",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.0",
     "graphql": "^16.6.0",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "latest",
+    "next-urql": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "urql": "^3.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.0.0",
-    "@graphql-codegen/client-preset": "2.0.0",
+    "@graphql-codegen/typescript": "^3.0.1",
+    "@graphql-codegen/typescript-operations": "^3.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@graphql-codegen/typescript-urql": "^3.7.3",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
