--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
 SESSION_SECRET=ajlkqowieuqowueoi
+DATABASE_URL=postgres://postgres:0412@localhost:5432/pgcryptos
+REDIS_URL=127.0.0.1:6379
+PORT=3000
+CORS_ORIGIN=http://localhost:3001
+```
