--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     ".": "./dist/index.js"
   },
   "scripts": {
+    "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "dev2": "nodemon dist/src/index.js",
+    "dev": "nodemon dist/src/index.js",
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -40,6 +40,7 @@
     "connect-memcached": "^2.0.0",
     "connect-redis": "5.0.0",
     "cookie-parser": "^1.4.6",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
